--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,9 @@
     "target": "es5"
   },
   "include": [
-    "src/**/*.ts"
+    "src/**/*.ts",
+    "src/**/*.json",
+    "src/*.json",
   ],
   "exclude": [
     "node_modules",
